fix: realign value indicators
128px tended to be misaligned with certain zoom values, this should fix that.

--- a/src/modules/Plugins/style-settings.scss
+++ b/src/modules/Plugins/style-settings.scss
@@ -99,7 +99,7 @@
     text-align: center;
     position: absolute;
     top: 8px;
-    left: 128px;
+    left: calc(100% - 65px);
     width: 28px;
   }
 }
